--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "babel-preset-es2015": "^6.6.0",
     "babelify": "^7.2.0",
     "browserify": "^13.0.0",
+    "clone-deep": "^0.2.4",
     "dotenv": "^2.0.0",
     "fs-extra": "^0.26.5",
     "gulp": "^3.9.1",
